// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creating new shapes pencil lines will reisze the group appropriately if the new shape changes the group bounds: box shape after second resize 1`] = `
Box2d {
  "h": 40,
  "w": 40,
  "x": -20,
  "y": -20,
}
`;

exports[`creating new shapes pencil lines will reisze the group appropriately if the new shape changes the group bounds: group shape after second resize 1`] = `
Box2d {
  "h": 120,
  "w": 120,
  "x": -20,
  "y": -20,
}
`;

exports[`creating new shapes pencil lines will reisze the group appropriately if the new shape changes the group bounds: group with line shape 1`] = `
Box2d {
  "h": 110,
  "w": 110,
  "x": -10,
  "y": -10,
}
`;

exports[`creating new shapes pencil lines works if the shape drawing begins outside of the current group bounds: box shape after resize 1`] = `
Box2d {
  "h": 50,
  "w": 50,
  "x": -100,
  "y": -100,
}
`;

exports[`creating new shapes pencil lines works if the shape drawing begins outside of the current group bounds: group with line 1`] = `
Box2d {
  "h": 200,
  "w": 200,
  "x": -100,
  "y": -100,
}
`;
